# CollageMaker2

./: CMakeLists.txt  README.md
include/: Clock.hpp  CsvLog.hpp  Quad.hpp  Rectangle.hpp  RenderContext.hpp  RenderUtils.hpp  UpdateArea.hpp
res/shaders/: CS_Error.glsl  CS_Gradient.glsl  CS_Imprint.glsl  CS_Reduce.glsl  CS_ReduceError.glsl  CS_ReduceGradient.glsl  FS_Quad.glsl  VS_Quad.glsl
src/: Clock.cpp  CsvLog.cpp  Rectangle.cpp  RenderUtils.cpp  UpdateArea.cpp  main.cpp
